--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "concurrently \"npm run dev \" \"npm run server\""
   },
   "dependencies": {
+    "@vercel/speed-insights": "^1.0.12",
     "concurrently": "^8.2.2",
     "json-server": "^1.0.0-beta.1",
     "react": "^18.2.0",
